<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/home_motion_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutDescription="@xml/scene_home"
            app:showPaths="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2">

        <Button
                android:text="@string/motion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="58dp"
                android:id="@+id/btn_with_speed"
                tools:layout_editor_absoluteX="23dp"/>
    </androidx.constraintlayout.motion.widget.MotionLayout>

    <Button
            android:text="@string/left_right_motion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_simple_motion"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"/>

    <Button
            android:id="@+id/btn_rotate_motion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rotate_color_motion"
            app:layout_constraintTop_toBottomOf="@+id/btn_simple_motion"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="8dp"/>

    <Button
            android:id="@+id/btn_image_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/image_filter"
            app:layout_constraintTop_toBottomOf="@+id/btn_rotate_motion" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"/>

    <Button
            android:id="@+id/btn_key_frames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/key_frames"
            app:layout_constraintTop_toBottomOf="@+id/btn_image_filter" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/coordinator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_coordinator"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_switch"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/pager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pager"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_coordinator" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_menu"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_pager" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"/>

    <Button
            android:id="@+id/btn_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/switch_buttons"
            app:layout_constraintTop_toBottomOf="@+id/btn_key_frames" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.39"/>
</androidx.constraintlayout.widget.ConstraintLayout>